Added iterable header value support to `Headers.addTo`.