@@ -10,12 +10,18 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.Serial;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 /**
  * Test class for {@link Headers}.
@@ -49,213 +55,358 @@ class HeadersTest {
 		}
 	};
 
-	@Test
-	void shouldAddHeadersToExistingHeaders() {
-		var headersToAdd = Map.of(N2, List.of(V3, V4));
+	@Nested
+	class AddToTests {
 
-		Headers.addTo(headers, headersToAdd);
+		@Test
+		void shouldAddHeadersToExistingHeaders() {
+			var headersToAdd = Map.of(N2, List.of(V3, V4));
 
-		var expected = Map.of(
-				N1, List.of(V1, V2),
-				N2, List.of(V3, V4));
+			Headers.addTo(headers, headersToAdd);
 
-		assertThat(headers, equalTo(expected));
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of(V3, V4));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddNullHeader() {
+			var headersToAdd = Map.of(N2, new ArrayList<>() {
+				@Serial
+				private static final long serialVersionUID = 1L;
+				{
+					add(null);
+					add(null);
+				}
+			});
+
+			Headers.addTo(headers, headersToAdd);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of());
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddAnythingIfHeaderNameIsNull() {
+			var headersToAdd = new HashMap<String, List<String>>() {
+				@Serial
+				private static final long serialVersionUID = 1L;
+				{
+					put(null, List.of());
+				}
+			};
+
+			Headers.addTo(headers, headersToAdd);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddNullHeaderValueButAddHeader() {
+			Headers.addTo(headers, N2, null);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of());
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddEmptyHeaderValueButAddHeader() {
+			Headers.addTo(headers, N2, "");
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of());
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddSingleHeaderValue() {
+			Headers.addTo(headers, N2, V3);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of(V3));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddMultipleHeaderValues() {
+			Headers.addTo(headers, N2, V3);
+			Headers.addTo(headers, N2, V4);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of(V3, V4));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddHeaderValueToExistingHeader() {
+			Headers.addTo(headers, N1, V3);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2, V3));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddNullHeaderValueToExistingHeader() {
+			Headers.addTo(headers, N1, null);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddEmptyHeaderValueToExistingHeader() {
+			Headers.addTo(headers, N1, "");
+
+			var expected = Map.of(
+					N1, List.of(V1, V2));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@ParameterizedTest
+		@MethodSource("provideNullAndEmptyValues")
+		void shouldNotAddNullHeaderValueToExistingHeaderButAddHeader(final String v1, final String v2) {
+			Headers.addTo(headers, N1, v1);
+			Headers.addTo(headers, N2, v2);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of());
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddHeaderCollectionWithNullValues() {
+			Headers.addTo(headers, N2, Arrays.asList(V3, null, V4));
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of(V3, V4));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddHeaderArrayWithNullValues() {
+			Headers.addTo(headers, N2, new String[] { V3, null, V4 });
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of(V3, V4));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddHeaderArrayGivenAsObjectWithNullValues() {
+			Object headerValue = new String[] { V3, null, V4 };
+			Headers.addTo(headers, N2, headerValue);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of(V3, V4));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldAddHeaderOnlyWithoutValue() {
+			Headers.addTo(headers, N2);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2),
+					N2, List.of());
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		@Test
+		void shouldNotAddHeaderWithoutValueForExistingHeaders() {
+			Headers.addTo(headers, N1);
+
+			var expected = Map.of(
+					N1, List.of(V1, V2));
+
+			assertThat(headers, equalTo(expected));
+		}
+
+		private static Stream<Arguments> provideNullAndEmptyValues() {
+			return Stream.of(
+					Arguments.of((String) null, (String) null),
+					Arguments.of((String) null, ""),
+					Arguments.of("", (String) null),
+					Arguments.of("", ""));
+		}
 	}
 
-	@Test
-	void shouldNotAddNullHeader() {
-		var headersToAdd = Map.of(N2, new ArrayList<>() {
-			@Serial
-			private static final long serialVersionUID = 1L;
-			{
-				add(null);
-				add(null);
-			}
-		});
+	@Nested
+	class ContainsTests {
 
-		Headers.addTo(headers, headersToAdd);
+		@Test
+		void shouldReturnTrueWhenCheckingWithEmptyStringHeaderValueOnContains() {
+			boolean result = Headers.contains(N1, "", headers);
 
-		var expected = Map.of(
-				N1, List.of(V1, V2),
-				N2, List.of());
+			assertTrue(result);
+		}
 
-		assertThat(headers, equalTo(expected));
+		@Test
+		void shouldReturnTrueWhenCheckingExistingStringHeaderValueOnContains() {
+			boolean result = Headers.contains(N1, V1, headers);
+
+			assertTrue(result);
+		}
+
+		@Test
+		void shouldReturnFalseWhenCheckingNonExistingStringHeaderValueOnContains() {
+			boolean result = Headers.contains(N1, "non-existing", headers);
+
+			assertFalse(result);
+		}
+
+		@Test
+		void shouldReturnFalseWhenCheckingExistingStringHeaderValueInEmptyHeadersOnContains() {
+			boolean result = Headers.contains(N1, V1, Collections.emptyMap());
+
+			assertFalse(result);
+		}
+
+		@Test
+		void shouldReturnFalseWhenCheckingExistingHeaderInEmptyHeadersOnContains() {
+			boolean result = Headers.contains(N1, Collections.emptyMap());
+
+			assertFalse(result);
+		}
+
+		@Test
+		void shouldReturnTrueWhenCheckingExistingHeaderInHeadersOnContains() {
+			boolean result = Headers.contains(N1, headers);
+
+			assertTrue(result);
+		}
+
+		@Test
+		void shouldReturnTrueWhenCheckingExistingHeaderInHeadersIgnoringCaseOnContains() {
+			boolean result = Headers.contains(N1.toUpperCase(), headers);
+
+			assertTrue(result);
+		}
+
+		@Test
+		void shouldReturnFalseWhenCheckingNonExistingHeaderInHeadersOnContains() {
+			boolean result = Headers.contains("non-existing", headers);
+
+			assertFalse(result);
+		}
 	}
 
-	@Test
-	void shouldNotAddNullHeaderValueButAddHeader() {
-		Headers.addTo(headers, N2, null);
+	@Nested
+	class GetTests {
 
-		var expected = Map.of(
-				N1, List.of(V1, V2),
-				N2, List.of());
+		@Test
+		void shouldReturnHeaderWhenCaseDoesNotMatch() {
+			Map<String, List<String>> mapHeaders = Map.of("some-header", List.of(HEADER_VALUE));
 
-		assertThat(headers, equalTo(expected));
+			List<String> headerValues = Headers.get("Some-Header", mapHeaders);
+
+			assertThat(headerValues, hasSize(1));
+			assertThat(headerValues.getFirst(), equalTo(HEADER_VALUE));
+		}
+
+		@Test
+		void shouldReturnEmptyListOnGetFromEmptyHeadersMap() {
+			List<String> headerValues = Headers.get("Some-Header", Map.of());
+
+			assertThat(headerValues, notNullValue());
+			assertThat(headerValues, hasSize(0));
+		}
+
+		@Test
+		void shouldReturnEmptyListOnGetFromNullHeadersMap() {
+			List<String> headerValues = Headers.get("Some-Header", null);
+
+			assertThat(headerValues, notNullValue());
+			assertThat(headerValues, hasSize(0));
+		}
+
+		@Test
+		void shouldReturnEmptyListOnGetForNonExistingHeader() {
+			Map<String, List<String>> mapHeaders = Map.of("some-header", List.of(HEADER_VALUE));
+
+			List<String> headerValues = Headers.get("non-existing-header", mapHeaders);
+
+			assertThat(headerValues, notNullValue());
+			assertThat(headerValues, hasSize(0));
+		}
 	}
 
-	@Test
-	void shouldNotAddEmptyHeaderValueButAddHeader() {
-		Headers.addTo(headers, N2, "");
+	@Nested
+	class OfTests {
 
-		var expected = Map.of(
-				N1, List.of(V1, V2),
-				N2, List.of());
+		@Test
+		void shouldCreateHeadersMapWithAllHeaders() {
+			Map<String, List<String>> resultHeaders = Headers.of(
+					HeaderFunction.header(N1, V1),
+					HeaderFunction.header(N2, V2));
 
-		assertThat(headers, equalTo(expected));
-	}
+			Map<String, List<String>> expected = new HashMap<>();
+			expected.put(N1, List.of(V1));
+			expected.put(N2, List.of(V2));
 
-	@Test
-	void shouldNotAddAnythingIfHeaderNameIsNull() {
-		var headersToAdd = new HashMap<String, List<String>>() {
-			@Serial
-			private static final long serialVersionUID = 1L;
-			{
-				put(null, List.of());
-			}
-		};
+			assertThat(resultHeaders, equalTo(expected));
+		}
 
-		Headers.addTo(headers, headersToAdd);
+		@Test
+		void shouldCreateHeadersMapWithNoHeaders() {
+			Map<String, List<String>> resultHeaders = Headers.of();
 
-		var expected = Map.of(
-				N1, List.of(V1, V2));
+			assertThat(resultHeaders, equalTo(Collections.emptyMap()));
+		}
 
-		assertThat(headers, equalTo(expected));
-	}
+		@Test
+		void shouldCreateHeadersMapWithNullHeaders() {
+			Map<String, List<String>> resultHeaders = Headers.of((HeaderFunction[]) null);
 
-	@Test
-	void shouldReturnTrueWhenCheckingWithEmptyStringHeaderValueOnContains() {
-		boolean result = Headers.contains(N1, "", headers);
+			assertThat(resultHeaders, equalTo(Collections.emptyMap()));
+		}
 
-		assertTrue(result);
-	}
+		@Test
+		void shouldCreateImmutableHeadersMapWithAllHeaders() {
+			Map<String, List<String>> resultHeaders = Headers.of(
+					HeaderFunction.header(N1, V1),
+					HeaderFunction.header(N2, V2));
 
-	@Test
-	void shouldReturnTrueWhenCheckingExistingStringHeaderValueOnContains() {
-		boolean result = Headers.contains(N1, V1, headers);
+			List<String> newValue = List.of("new-value");
+			assertThrows(UnsupportedOperationException.class, () -> resultHeaders.put("new-header", newValue));
+		}
 
-		assertTrue(result);
-	}
+		@Test
+		void shouldCreateImmutableHeadersMapWithNoHeaders() {
+			Map<String, List<String>> resultHeaders = Headers.of();
 
-	@Test
-	void shouldReturnFalseWhenCheckingNonExistingStringHeaderValueOnContains() {
-		boolean result = Headers.contains(N1, "non-existing", headers);
-
-		assertFalse(result);
-	}
-
-	@Test
-	void shouldReturnFalseWhenCheckingExistingStringHeaderValueInEmptyHeadersOnContains() {
-		boolean result = Headers.contains(N1, V1, Collections.emptyMap());
-
-		assertFalse(result);
-	}
-
-	@Test
-	void shouldReturnFalseWhenCheckingExistingHeaderInEmptyHeadersOnContains() {
-		boolean result = Headers.contains(N1, Collections.emptyMap());
-
-		assertFalse(result);
-	}
-
-	@Test
-	void shouldReturnTrueWhenCheckingExistingHeaderInHeadersOnContains() {
-		boolean result = Headers.contains(N1, headers);
-
-		assertTrue(result);
-	}
-
-	@Test
-	void shouldReturnTrueWhenCheckingExistingHeaderInHeadersIgnoringCaseOnContains() {
-		boolean result = Headers.contains(N1.toUpperCase(), headers);
-
-		assertTrue(result);
-	}
-
-	@Test
-	void shouldReturnFalseWhenCheckingNonExistingHeaderInHeadersOnContains() {
-		boolean result = Headers.contains("non-existing", headers);
-
-		assertFalse(result);
-	}
-
-	@Test
-	void shouldReturnHeaderWhenCaseDoesNotMatch() {
-		Map<String, List<String>> mapHeaders = Map.of("some-header", List.of(HEADER_VALUE));
-
-		List<String> headerValues = Headers.get("Some-Header", mapHeaders);
-
-		assertThat(headerValues, hasSize(1));
-		assertThat(headerValues.getFirst(), equalTo(HEADER_VALUE));
-	}
-
-	@Test
-	void shouldReturnEmptyListOnGetFromEmptyHeadersMap() {
-		List<String> headerValues = Headers.get("Some-Header", Map.of());
-
-		assertThat(headerValues, notNullValue());
-		assertThat(headerValues, hasSize(0));
-	}
-
-	@Test
-	void shouldReturnEmptyListOnGetFromNullHeadersMap() {
-		List<String> headerValues = Headers.get("Some-Header", null);
-
-		assertThat(headerValues, notNullValue());
-		assertThat(headerValues, hasSize(0));
-	}
-
-	@Test
-	void shouldReturnEmptyListOnGetForNonExistingHeader() {
-		Map<String, List<String>> mapHeaders = Map.of("some-header", List.of(HEADER_VALUE));
-
-		List<String> headerValues = Headers.get("non-existing-header", mapHeaders);
-
-		assertThat(headerValues, notNullValue());
-		assertThat(headerValues, hasSize(0));
-	}
-
-	@Test
-	void shouldCreateHeadersMapWithAllHeaders() {
-		Map<String, List<String>> resultHeaders = Headers.of(
-				HeaderFunction.header(N1, V1),
-				HeaderFunction.header(N2, V2));
-
-		Map<String, List<String>> expected = new HashMap<>();
-		expected.put(N1, List.of(V1));
-		expected.put(N2, List.of(V2));
-
-		assertThat(resultHeaders, equalTo(expected));
-	}
-
-	@Test
-	void shouldCreateHeadersMapWithNoHeaders() {
-		Map<String, List<String>> resultHeaders = Headers.of();
-
-		assertThat(resultHeaders, equalTo(Collections.emptyMap()));
-	}
-
-	@Test
-	void shouldCreateHeadersMapWithNullHeaders() {
-		Map<String, List<String>> resultHeaders = Headers.of((HeaderFunction[]) null);
-
-		assertThat(resultHeaders, equalTo(Collections.emptyMap()));
-	}
-
-	@Test
-	void shouldCreateImmutableHeadersMapWithAllHeaders() {
-		Map<String, List<String>> resultHeaders = Headers.of(
-				HeaderFunction.header(N1, V1),
-				HeaderFunction.header(N2, V2));
-
-		List<String> newValue = List.of("new-value");
-		assertThrows(UnsupportedOperationException.class, () -> resultHeaders.put("new-header", newValue));
-	}
-
-	@Test
-	void shouldCreateImmutableHeadersMapWithNoHeaders() {
-		Map<String, List<String>> resultHeaders = Headers.of();
-
-		List<String> newValue = List.of("new-value");
-		assertThrows(UnsupportedOperationException.class, () -> resultHeaders.put("new-header", newValue));
+			List<String> newValue = List.of("new-value");
+			assertThrows(UnsupportedOperationException.class, () -> resultHeaders.put("new-header", newValue));
+		}
 	}
 }
